---
config:
  theme: base
  look: classic
---
stateDiagram-v2
    [*] --> Connecting
    Connecting --> Setup : Connected to peers
    Connecting --> Shutdown : Unable to connect to peers
    Setup --> Executing : sent/received starting model
    state Executing {
        [*] --> Training
        Training --> WaitingForPeers : training step complete
        WaitingForPeers --> SecureAverageComputation : all peers ready for SAC
        SecureAverageComputation --> Training : model not complete
        SecureAverageComputation --> [*] : model complete
    }
    Executing --> SavingPartialModel : peer failure detected
    Executing --> TerminationCheck : execution completed
    TerminationCheck --> SavingModel : all peers reached desired accuracy
    SavingModel --> Shutdown : model saved
    SavingPartialModel --> Shutdown : partial model saved
    Shutdown --> [*]

